--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@
     float: left;
     margin-right: 20px;
     width: 70px;
+    height:70px;
 }
 .dashboard-comment > .dc-content:before {
     -moz-border-bottom-colors: none;
