--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-.poster{list-style:none;overflow:hidden;text-align:left;}
+.poster{background:#D4ECFC;border-radius: 6px;list-style: none outside none;margin-top: 5px;overflow: hidden;padding: 0 5px;text-align: left;}
 .poster ul li{padding:0;margin:0;list-style:none;float:left;padding-left:5px;}
 .poster li.avatar{float:left;}
 .moderatorbar{clear:right;}
@@ -43,7 +43,6 @@
     float: left;
     margin-right: 20px;
     width: 70px;
-    height:70px;
 }
 .dashboard-comment > .dc-content:before {
     -moz-border-bottom-colors: none;
